<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="henriiv.queueapp20.KoTid"
    android:background="@color/backgroundAnv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <Chronometer
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/chronometer"
        android:textColor="@color/backgroundAnv"/>

    <TextView
        android:id="@+id/kotid"
        android:textColor="@color/vitText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:textSize="40sp"
        android:gravity="center"/>

    <Button
        android:text="@string/inneText"
        android:id="@+id/inneButton"
        android:background="#88cc66"
        android:textColor="@color/vitText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:textSize="40sp"/>
    <Button
        android:text="@string/LamnarKoText"
        android:id="@+id/lamnaKoButton"
        android:background="#6688cc"
        android:textColor="@color/vitText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:textSize="40sp"/>

    <Button
        android:text="@string/enInEnUtText"
        android:id="@+id/enInEnUtButton"
        android:background="#A52A2A"
        android:textColor="@color/vitText"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:textSize="40sp"/>


</LinearLayout>
